[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/scenes/challenges_menu/ChallengeMenu2.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 73, 40.5 )

[node name="ChallengeMenu2" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="TestButton" type="Button" parent="UI"]
margin_left = 1162.0
margin_top = 21.0
margin_right = 1253.0
margin_bottom = 45.0
text = "MAIN MENU"

[node name="LivesLabel" type="Label" parent="UI"]
margin_left = 21.0
margin_top = 16.0
margin_right = 158.0
margin_bottom = 36.0
text = "LIVES: 0"

[node name="Base" type="Area2D" parent="."]
position = Vector2( 643, 366 )

[node name="ColorRect" type="ColorRect" parent="Base"]
margin_left = -71.0
margin_top = -40.0
margin_right = 76.0
margin_bottom = 43.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base"]
position = Vector2( 3, 1.5 )
shape = SubResource( 1 )

[node name="EnemyContainer" type="YSort" parent="."]

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="pressed" from="UI/TestButton" to="." method="_on_TestButton_pressed"]
[connection signal="body_entered" from="Base" to="." method="_on_Base_body_entered"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_DifficultyTimer_timeout"]
